syntax = "proto3";

package pl.common;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "pixielabs.ai/pixielabs/src/services/common/proto;jwt";

// Store the basic JWT claim information.
message JWTClaims {
  // Generic claims, as referenced at
  // https://tools.ietf.org/html/rfc7519#section-4.1
  string audience     = 1 [
                          (gogoproto.jsontag) = "aud"
                          ];

  int64 expires_at    = 2 [
                          (gogoproto.jsontag) = "exp"
                          ];

  string jti          = 3 [
                          (gogoproto.customname) = "JTI",
                           (gogoproto.jsontag) = "jti"
                          ];

  int64 issued_at     = 4 [
                          (gogoproto.jsontag) = "iat"
                          ];

  string issuer       = 5 [
                          (gogoproto.jsontag) = "iss"
                          ];

  int64 not_before    = 6 [
                          (gogoproto.jsontag) = "nbf"
                          ];

  string subject      = 7 [
                          (gogoproto.jsontag) = "sub"
                          ];

  // Custom claims.
  string user_id = 8 [
          (gogoproto.customname) = "UserID",
          (gogoproto.jsontag) = "userID"
  ];
  string email   = 9;
}
